@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - jbj: fix: rpmtsCheck() needs to return 1 when problems exist.
     - rse: (again) replace u_int32_t with uint32_t to be consistent across the code base
     - jbj: use RPM_OS_NTOQNX as manifest constant.
     - jbj: updated nl.po (Translation Project).
